# newtype-enum

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.tpl
.github/workflows/: build.yml
newtype-enum/: Cargo.toml  README.md
newtype-enum-macro/: Cargo.toml  README.md
newtype-enum-macro/src/: lib.rs
newtype-enum/src/: lib.rs  unstable.rs
